<resources>
    <string name="app_name">Helper App</string>
    <string name="t_tby_clicking_submit_you_are_accepting_the_terms_and_conditions">\t\tBy clicking submit you are accepting the terms and conditions</string>
    <string name="submit">submit</string>
    <string name="confirm_password"> Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="log_in_here">Log In here</string>
    <string name="create_a_new_account">Create a new account!</string>
    <string name="leaving_us_so_soon">Leaving us so soon!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="electrician">Electrician</string>
    <string name="log_out">Log out</string>
    <string name="helper_image">helper image</string>
</resources>