<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="400dp"
        android:minWidth="350dp"
        android:padding="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="400dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:background="#CBC3E3"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/log_in"
                android:textSize="64sp"
                android:textAllCaps="true"/>
            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="phone"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minWidth="200dp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="200dp"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:drawableLeft="@drawable/baseline_login_24"/>

            <TextView
                android:id="@+id/go_to_sign_up_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:layout_marginStart="48dp"
                android:minHeight="48dp"
                android:text="@string/create_a_new_account"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/baseline_arrow_back_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>