<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="600dp"
        android:minWidth="350dp"
        android:padding="12dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/royal_blue"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textSize="64sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/name_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:src="@drawable/name_icon"
                app:layout_constraintEnd_toStartOf="@+id/name_et"
                app:layout_constraintHorizontal_bias="0.732"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_tv" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minWidth="250dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_tv" />

            <ImageView
                android:id="@+id/phone_number_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:src="@drawable/phone_icon"
                app:layout_constraintEnd_toStartOf="@+id/phone_number_et"
                app:layout_constraintHorizontal_bias="0.732"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_icon_iv" />


            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minWidth="250dp"
                android:minHeight="48dp"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_et" />

            <ImageView
                android:id="@+id/email_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/email_icon"
                app:layout_constraintHorizontal_bias="0.732"
                app:layout_constraintEnd_toStartOf="@+id/email_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_icon" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="phone"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minWidth="250dp"
                android:minHeight="48dp"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_et" />

            <ImageView
                android:id="@+id/password_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:src="@drawable/password_icon"
                app:layout_constraintHorizontal_bias="0.732"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/password_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_icon_iv" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="250dp"
                app:layout_constraintHorizontal_bias="0.7"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_et" />

            <ImageView
                android:id="@+id/confirm_password_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:src="@drawable/password_icon"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/confirm_password_et"
                app:layout_constraintHorizontal_bias="0.732"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_icon_iv" />

            <EditText
                android:id="@+id/confirm_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:autofillHints="password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minWidth="250dp"
                android:minHeight="48dp"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_et" />

            <TextView
                android:id="@+id/submit_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:maxWidth="250dp"
                android:textAlignment="center"
                android:minWidth="200dp"
                android:text="@string/t_tby_clicking_submit_you_are_accepting_the_terms_and_conditions"
                app:drawableLeftCompat="@drawable/baseline_info_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_et" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/arctic_blue"
                android:drawableEnd="@drawable/submit_icon"
                android:drawableTint="@color/black"
                android:gravity="center"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/navy_blue"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_info" />

            <TextView
                android:id="@+id/go_to_log_in_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/log_in_here"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.9"
                app:drawableRightCompat="@drawable/baseline_arrow_forward_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>